Spotify Web API
-Conectando com a API do Spotify

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Pedro Almeida Rocha",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "spotify-web-api-node": "^5.0.0"
   }
 }
