--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "openweather-apis": "^4.4.1",
     "spotify-web-api-node": "^5.0.0"
   }
 }
